# xapian-binding-python

./: CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  Makefile.in  README.md  doccomments.i  except.i  setup.py  version.i
modern/: xapian.py  xapian_wrap.cc
